src/objects/SlipPrinterNameToUserMap__mdt.object
<CustomObject>
    <description>Every user would have a different slip printer linked to their machine. we would be maintaining the list here.</description>
    <fields>
        <fullName>IsDebugON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDebugON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrinterName__c</fullName>
        <label>PrinterName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SlipPrinterNameToUserMap</label>
    <pluralLabel>SlipPrinterNameToUserMaps</pluralLabel>
</CustomObject>